# Qwen3-Coder-Next

./: CONTRIBUTING..md  LICENSE  README.md  pyproject.toml
documents/: architecture.md  coding_standards.md  progress.md  roadmap.md  session_handoff.md  vision.md
src/qwen3_coder_next/: __init__.py  __main__.py
src/qwen3_coder_next/adapters/: __init__.py  (+3 more)
tests/integration/: __init__.py  test_local_tooling_adapter.py
tests/smoke/: test_artifact_manager.py  test_config_loading.py  test_contract_creation.py  test_evaluation_foundation.py  test_executor.py  test_local_tooling_artifact_registry.py  test_local_tooling_audit.py  test_local_tooling_commands.py  test_local_tooling_contracts.py  test_local_tooling_diff.py  test_local_tooling_filesystem.py  test_local_tooling_operations.py  test_local_tooling_reads.py  test_local_tooling_resolution.py  test_logging_system.py  test_memory_foundation.py  test_model_gateway.py  test_orchestration_shell.py  test_planning_foundation.py  test_planning_step1.py  test_planning_step2.py  test_planning_step3.py  test_planning_step4.py  test_planning_step5.py  test_planning_step6.py  test_planning_step8.py  test_prompt_infrastructure.py  test_research_step1.py  test_runtime_bootstrap.py  test_runtime_step7.py  test_state_store.py  test_tool_framework.py
tests/unit/: __init__.py  test_local_tooling_adapter.py  test_local_tooling_artifact_registry.py  test_local_tooling_audit.py  test_local_tooling_commands.py  test_local_tooling_diff.py  test_local_tooling_mutations.py  test_local_tooling_reads.py  test_local_tooling_resolution.py
(+77 files in other folders)
