[project]
name = "qwen3-coder-next"
version = "0.1.0"
description = "Foundation repository skeleton for Qwen3-Coder-Next."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/qwen3_coder_next"]
